# open-geodata-model

./: .all-contributorsrc  .gitignore  404.html  Geodata_Input_Template_2023-03-08.xlsx  Project_Location_Data_Template_EN_V03.xlsx  Project_Location_Data_Template_FR_V03.xlsx  Project_Location_Data_Template_V02.xlsx  Project_Location_Data_Template_V021.xlsx  Project_Location_Data_Template_V021_FR.xlsx  Project_Location_Data_Template_V025_FR.xlsx  Project_Location_ODK_XFORM_Template_V01.xml  Project_Location_ODK_XLSFORM_Template_V01.xlsx  README.md  TdR collecte_de_donnees_sites_du_projet.docx  index.html  mkdocs.yml  overview_templates_tor  pyproject.toml  requirements.txt  ~$Project_Location_Data_Template_FR_V03.xlsx
archive/: Project_Location_Data_Template_V02.xlsx
data/: location_types.json
deprecated/: test_iati_codes.py  test_location_types.py  test_validate_simple_schema.py
dev/: index.html
docs/: Geodata_ToR  How-To_for_KfW_staff  How-to_for_KfW_staff  createSchemaDoc.py  documentation.md  faq.md  howto_for_kfw_staff.md  index.md  kobo_guide.md  kobo_guide_V1.md  location_type.md  model.md  overview_templates_tor.md  project_location_schema.md  sample_tor.md  sdg_icons.md  technical_notes.md
faq/: index.html
kobo_guide/: index.html
location_type/: index.html
open-geodata-model-package/: package.json
overview_templates_tor/: index.html
references/: dac5_schema.json  feature_project_schema.json  generated_sector_location_schema.json  iati_sector_codes_v2_0_3.json  kfw_location_types.json  kfw_location_types.xlsx  master_project_schema.json  project_core_schema.json  project_core_schema_en.json  project_core_schema_fr.json  project_location_schema.json  sector_location_schema.json  sector_location_schema_en.json  sector_location_schema_fr.json
sample_tor/: index.html
sample_tor_fr/: index.html
scripts/: extract_location_types.py
sdg_icons/: index.html
(+111 files in other folders)
