[tool.poetry]
name = "project-location-model"
version = "1.0.0"
description = "Open Geodata Model for Mapping Project Sites in ODA"
authors = ["Your Name <you@example.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
openpyxl = "^3.1.4"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
