[tool.poetry]
name = "project-location-model"
version = "1.0.0"
description = "Open Geodata Model for Mapping Project Sites in ODA"
authors = ["Your Name <you@example.com>"]
license = "Apache"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
openpyxl = "^3.1.4"
pytest = "^8.2.2"
pylint = "^3.2.5"
black = {extras = ["jupyter"], version = "^24.4.2"}
jupyter = "^1.0.0"
mkdocs-material = "^9.5.27"
geopandas = "^1.0.0"
mkdocs-jupyter = "^0.24.7"
icecream = "^2.1.3"
jsonschema = "^4.23.0"
jsonschema2md = "^1.1.0"
referencing = "^0.35.1"
json-schema-for-humans = "^1.3.4"

[tool.poetry.group.dev.dependencies]
json-linter = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
